@@ -92,7 +92,10 @@ setMethod("t", signature(x = "dsyMatrix"), t_trMatrix,
           valueClass = "dsyMatrix")
 
 setMethod("BunchKaufman", signature(x = "dsyMatrix"),
-	  function(x) .Call(dsyMatrix_trf, x))
+	  function(x, ...) .Call(dsyMatrix_trf, x))
+
+setMethod("BunchKaufman", signature(x = "matrix"),
+	  function(x, uplo=NULL, ...) .Call(matrix_trf, x, uplo))
 
 setAs("dsyMatrix", "dpoMatrix",
       function(from){
